# white-deer

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  white-deer.code-workspace
package/script/scheme/: test.scm
package/scripts/lua/: another.lua  f16.lua  hotreload.lua  main.lua  object.lua  repl.lua
package/shaders/: cube.fs  shadowmap.fs  shadowmap.vs  skybox.fs  skybox.vs  test.fs  test.vs  test_vnt.fs  test_vnt.shader  test_vnt.vs  test_vt.fs  test_vt.vs
package/shaders/postprocess/: bloom.fs  blur.fs  blurh.fs  blurv.fs  copy.fs  extractlight.fs  gamma.fs  grayscale.fs  hdr.fs  inversion.fs  postprocess.vs
src/application/: application.cpp  application.h  main.cpp
src/camera/: camera.cpp  camera.h
src/components/: camera.cpp  camera.h  collider.cpp  collider.h  component.bindings.cpp  component.cpp  component.h  light.cpp  light.h  luascript.cpp  luascript.h  renderer.cpp  renderer.h  renderercomponent.cpp  script.cpp  script.h  skybox.h  transform.cpp  transform.h
src/editor/gui/: editor_gui.cpp  editor_gui.h  editorgui.cpp  editorgui.h  gamewindow.h  logwindow.h  logwindows.cpp  luawindow.cpp  luawindow.h  mainmenu.h  objectwindow.h  scenewindow.h  shaderwindow.h  test_editor.cpp  test_editor.h  testscroll.cpp  testwindow.h  textscroll.h
src/filesystem/: filesystem.h  filesystemmanager.h  localfilesystem.cpp  localfilesystem.h
src/graphics/: postprocess.cpp  postprocess.h
src/graphics/opengl/: glTexture.cpp  glTexture.h  glcubemaptexture.cpp  glcubemaptexture.h  glerror.h  glframebuffer.cpp  glframebuffer.h  glmaterial.h  glmesh.cpp  glmesh.h  glrendertexture.cpp  glrendertexture.h  glshader.cpp  glshader.h  glvertexattrib.h
src/graphics/renderloop/: renderloop.cpp  renderloop.h
src/jobsystem/: workers.cpp  workers.h
src/log/: log.cpp  log.h
src/physics/: physicsmanager.cpp  physicsmanager.h
src/scene/: gameobject.h  scene.cpp  scene.h
src/scriptsystem/lua/: luamanager.h  luamanger.cpp
src/serialization/: editortransfer.cpp  editortransfer.h  transferbase.h
src/shaderlab/: GLSLLexer.g4  GLSLParser.g4  GLSLPreParser.g4  antlr-command.bat
src/shaderlab/.antlr/: GLSLLexer.interp  GLSLLexer.java  GLSLPreParser.interp  GLSLPreParser.java
src/ticktime/: timemanager.cpp  timemanager.h
src/utils/common/: enum.h  macro.h  physics.h  registry.h  singleton.h  string.h
test/: test_chibi.cpp  test_load_model.cpp  test_lua.cpp  test_plog.cpp  test_workers.cpp  test_workers2.cpp
